# Zenith

./: Cargo.toml  LICENSE  config.toml
src/: config.rs  main.rs  style.rs  ui.rs
src/modules/: calendar.rs  clock.rs  mod.rs  system.rs  todo.rs  workspaces.rs
